@startuml
'https://plantuml.com/class-diagram

class HeroAircraft{
    - {static} heroAircraft:HeroAircraft
    - {static} CONTEXT:ShootContext

    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance:HeroAircraft
    + setStrategy(ShootStrategy shootStrategy):void
    + forward():void
    + shoot():List<BaseBullet>
}

abstract class BaseGame{}

BaseGame --> HeroAircraft
HeroAircraft --> HeroAircraft

@enduml